--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,9 @@
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-animate/angular-animate.min.js"></script>    
     <script src="lib/angular-aria/angular-aria.min.js"></script>
-    <!-- Angular Material Javascript -->
-    <script src="lib/angular-material/angular-material.js"></script>
+    <script src="lib/angular-material/angular-material.min.js"></script>
+    <!-- Help Javascript libraries-->
+    <script src="lib/underscore/underscore-min.js"></script>
     <!-- Angular Material Javascript -->
     <script src="js/app.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
