--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           </div>
         </form>
         <div>
-          <div flex layout layout-align="end end" class="listHeader">{{remaining()}} of {{todos.length}} remaining</span>[
+          <div flex layout layout-align="end end" class="listHeader">{{completedCount.length}} of {{todos.length}} remaining</span>[
             <a href="" ng-click="archive()">Archive</a>]</div>
           <ul>
             <li ng-repeat="todo in todos">
@@ -56,7 +56,9 @@
     <script src="lib/underscore/underscore-min.js"></script>
     <!-- Angular Material Javascript -->
     <script src="js/app.js"></script>
+   
     <script src="js/controllers/todoCtrl.js"></script>
+    <script src="js/factories/helper.js"></script>
   </body>
 
 </html>
